<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:padding="@dimen/dialog_content_padding">

    <CheckBox
        android:id="@+id/cb_filtro_cartelas_ganhadoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CheckBox"
        android:text="@string/filtro_cartelas_ganhadoras" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sorteio_cartela_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sc_input_layout_margin_top"
        android:layout_marginBottom="@dimen/sc_input_layout_margin_bottom"
        app:hintTextAppearance="@style/SorteioCartelaInputLayoutHint">

        <EditText
            android:id="@+id/et_sorteio_cartela_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_sorteio_cartela_numero_hint"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/sc_numero_cartela_filtro_text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_sorteio_cartela_filtro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sc_dialog_filtro_cartelas_rv_height" />
</LinearLayout>