<?xml version="1.0" encoding="utf-8"?>
<TextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tv_cartela_numero"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:clickable="false"
    style="@style/ListItem" />